Another Attempt to fix footer clipping

--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -65,11 +65,12 @@
 /*Footer style*/
 .footer {
   position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 1rem;
   background-color: white;
   border-top: 1px solid #e6e6e6;
-  left: 0;
-  bottom: 0;
-  width: 100%;
   font-size: smaller;
   color: black;
   text-align: center;
